# Lumon

./: .gitignore  Makefile  README.md  lumon
backend/: pyproject.toml
backend/app/: config.py  main.py  opencode_observer.py  opencode_signals.py
backend/app/adapters/: base.py  opencode.py  playwright_native.py  registry.py
backend/app/browser/: actions.py  demo_pages.py  screencast.py
backend/app/fixtures/: build_fixtures.py  replay.py
backend/app/fixtures/messages/: agent_event.json  approval_required.json  background_worker_update.json  error.json  frame.json  session_state.json  task_result.json
backend/app/fixtures/timelines/: approval_takeover.json  happy_path.json  invalid_state_commands.json  mapped_adapter_event.json  opencode_mapped_event.json  pause_resume.json  stale_checkpoint_error.json  takeover.json  unknown_command.json
backend/app/optional/: __init__.py  langsmith_bridge.py
backend/app/protocol/: enums.py  models.py  normalizer.py  validation.py
backend/app/session/: artifacts.py  manager.py  opencode_attach.py  state_machine.py
backend/app/streaming/: stream_profile.py  webrtc.py
backend/app/utils/: ids.py
backend/tests/: test_action_layer.py  test_connector_controls.py  test_lumon_app.py  test_lumon_doctor.py  test_lumon_opencode_wrapper.py  test_lumon_restart.py  test_lumon_setup.py  test_opencode_connector.py  test_opencode_observer.py  test_opencode_signals.py  test_optional_trace_bridge.py  test_protocol.py  test_runtime.py  test_screencast.py  test_security_controls.py  test_session_artifacts.py  test_stream_profile.py
(+105 files in other folders)
