[project]
name = "lumon-backend"
version = "0.1.0"
description = "Lumon backend runtime"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "pydantic>=2.10,<3.0",
  "uvicorn[standard]>=0.32,<1.0",
  "playwright>=1.51,<2.0",
  "aiortc>=1.9,<2.0",
  "av>=12.0,<13.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.25,<1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
